--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
  <title>Page title</title>
 </head>
 <body>  
- <video src="https://short.ink/g9Sw4Q7pP"autoplay loop muted controls></video>
  
 <iframe width="640" height="360" src="https://short.ink/g9Sw4Q7pP" frameborder="0" scrolling="0" allowfullscreen></iframe>
+<iframe width="640" height="360" src="https://streamable.com/v3fdlq" frameborder="0" scrolling="0" allowfullscreen></iframe>
 </body>
 </html>
