--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Page title</title>
 </head>
-<body>  
+<body>
  
-<iframe width="640" height="360" src="https://short.ink/g9Sw4Q7pP" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<iframe width="640" height="360" src="https://streamable.com/v3fdlq" frameborder="0" scrolling="0" allowfullscreen></iframe>
+ 
+ 
+ <IFRAME SRC="https://cdnwish.com/e/o2yaab7cksly" FRAMEBORDER=0 MARGINWIDTH=0 MARGINHEIGHT=0 SCROLLING=NO WIDTH=640 HEIGHT=360 allowfullscreen></IFRAME>
+
+
 </body>
 </html>
